--- a/hackathon_frontend/src/pages/HomePage/HomePage.css
+++ b/hackathon_frontend/src/pages/HomePage/HomePage.css
@@ -16,6 +16,8 @@
   /* align-items: center; */
   flex-wrap: wrap;
   background-color: #ffffff;
+  margin-top: 20px;
+  margin-inline: 50px;
   /* flex-direction: column; */
   /* justify-content: center; */
   /* align-items: center; */
@@ -29,13 +31,13 @@
 .collection-card {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-  max-width: 400px;
+  max-width: 320px;
   margin: 30px;
   width: min-content;
 }
 
 .collection-cover-image {
-  max-width: 400px;
+  max-width: 320px;
 }
 
 .collection-description {
