added home page nav

--- a/hackathon_frontend/src/components/Header/Header.css
+++ b/hackathon_frontend/src/components/Header/Header.css
@@ -20,6 +20,9 @@
   flex-direction: row;
   align-items: center;
 }
+.right-header-section > * {
+  margin-left: 20px;
+}
 
 .content-container {
   width: 100%;
