--- a/hackathon_frontend/src/App.css
+++ b/hackathon_frontend/src/App.css
@@ -3,3 +3,11 @@
   height: 100vh;
   width: 100vw;
 }
+
+.spin-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
